<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App Info -->
    <string name="app_name">Mozilla Device Manager</string>
    <string name="tvVersion">Version 1.0</string>
    
    <!-- Control Labels -->
    <string name="tvWipeStatus">Wipe status: </string>
    <string name="tvCurrentLocation">Last location sent to server</string>
    <string name="tvLatitude">Latitude: </string>
    <string name="tvLongitude">Longitude: </string>
    <string name="tvLocTime">Time location obtained: </string>
    <string name="tvRegister">This device is not registered with the Mozilla device manager.Enter a device name and click Register to setup Device Manager.</string>
    <string name="tvRegistered">This device is registered with the Mozilla device manager. You can now (optionally) track your device or perform a remote wipe.</string>
    <string name="tvNameRegister">Device name: </string>
    <string name="tvNameRegistered">Device name set to: </string>
    <string name="tvNameValue">No name</string>
    <string name="tvServerAddress">Server Address</string>
    <string name="tvLocationUpdateFrequency">Location Update Frequency (seconds)</string>
    <string name="tvTrackingDisabled">You must enable device tracking to change this.</string>
    <string name="tvAboutTitle">About</string>
    <string name="tvAboutInfo">This app enables users to track and remotely reset factory defaults on a device.</string>
    <string name="tvDebugInfo">Debug and Testing Info</string>
    <string name="tvDeviceId">Device ID:</string>
    
    <!--  Buttons -->
    <string name="btRegister">Register</string>
    <string name="btYes">Yes</string>
    <string name="btNo">No</string>
    <string name="btSave">Save</string>
    <string name="btCancel">Cancel</string>
    <string name="btResetRegistration">Reset Registration</string>
    
    <!-- Check Boxes -->
    <string name="cbAllowTrack">Allow tracking of this device</string>
    
    <!-- Status Messages -->
    <string name="smDeviceWiped">Device wiped</string>
    <string name="smDeviceNormal">No wipe requested</string>
    
    <!-- Error Messages -->
    <string name="emRegisterFailed">Registering device failed. Please make sure you are connected to the Internet or try again later.</string>
    <string name="emAllowTrackingFailed">Failed to contact the server. Please make sure you are connected to the Internet or try again later.</string>
    
    <!-- Messages -->
    <string name="mgEnterName">Enter a device name before registering your device.</string>
    <string name="mgAllowTracking">If you decide allow tracking of this device, it will occasionally check-in with Mozilla servers which will store your device\'s most recent known location. This will be done in a secure manner and Mozilla will only store your device\'s most recent location. For more information see [device manager website here]. \n\nIs Mozilla storing this information okay with you?</string>
    
    <!-- Menus -->
    <string name="mnSettings">Settings</string>
    <string name="mnAbout">About</string>
    
    <!-- Defaults -->
    <string name="dfLatLong">0.0000</string>
    <string name="dfLocTime">Never</string>
    <string name="dfLocationUpdateFrequency">3600</string>
    <string name="dfServerAddress">http://10.0.2.2:8000</string>
    <string name="dfDeviceId">Not registered, no ID assigned</string>
</resources>
