<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tvAboutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvAboutTitle">
    </TextView>
    <TextView
        android:id="@+id/tvAboutInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvAboutInfo">
    </TextView>
    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvVersion">
    </TextView>
    <TextView 
        android:id="@+id/tvDebug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDebugInfo">
    </TextView>
    <TextView
        android:id="@+id/tvDeviceId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDeviceId">
    </TextView>
    <TextView
        android:id="@+id/tvDeviceIdValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dfDeviceId">
    </TextView>
    <Button 
        android:id="@+id/btResetRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btResetRegistration">
    </Button>
</LinearLayout>