<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ViewSwitcher 
        android:id="@+id/vsRegisterDevice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
	        <Button 
	            android:id="@+id/btRegister"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
	            android:text="@string/btRegister">
	        </Button>
            <TextView
                android:id="@+id/tvRegister"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toLeftOf="@id/btRegister"
                android:text="@string/tvRegister">
            </TextView>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvRegistered"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvRegistered">
            </TextView>
        </LinearLayout>
    </ViewSwitcher>
    <CheckBox
        android:id="@+id/cbAllowTrack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vsRegisterDevice"
        android:text="@string/cbAllowTrack">
    </CheckBox>
	<TableLayout
        android:id="@+id/tl1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cbAllowTrack"
        android:stretchColumns="1">
        <TableRow>
	        <TextView 
	            android:id="@+id/tvCurrentLocation"
	            android:text="@string/tvCurrentLocation">
            </TextView>
        </TableRow>
        <TableRow>
	        <TextView
	            android:text="@string/tvLatitude">
            </TextView>
            <TextView 
	            android:id="@+id/tvLatitudeValue"
                android:gravity="right"
	            android:text="@string/dfLatLong">
            </TextView>
        </TableRow>
        <TableRow>
	        <TextView
	            android:text="@string/tvLongitude">
	        </TextView>
	        <TextView 
	            android:id="@+id/tvLongitudeValue"
                android:gravity="right"
	            android:text="@string/dfLatLong">
	        </TextView>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/tl2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tl1"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:id="@+id/tvWipeStatus"
                android:text="@string/tvWipeStatus">
            </TextView>
            <TextView
                android:id="@+id/tvWipeStatusValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/smDeviceNormal">
            </TextView>
        </TableRow>
    </TableLayout>
    
</RelativeLayout>
