<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TableLayout 
	   android:background="#FFFFFF"
	   android:layout_width="match_parent"
	   android:layout_height="wrap_content"
	   android:paddingTop="1dp"
	   android:stretchColumns="1">
	   <TableRow
	       android:background="#000000"
	       android:layout_marginTop="1dp"
	       android:layout_marginBottom="1dp">
	       <LinearLayout
	           android:orientation="vertical">
		       <TextView
		           android:id="@+id/tvServerAddress"
				   android:layout_width="match_parent"
				   android:layout_height="wrap_content"
		           android:text="@string/tvServerAddress">
		       </TextView>
		       <EditText
		           android:id="@+id/etServerAddress"
				   android:layout_width="match_parent"
				   android:layout_height="wrap_content"
		           android:text="@string/dfServerAddress">
	           </EditText>
           </LinearLayout>
	   </TableRow>
	   <TableRow
	       android:background="#000000"
	       android:layout_marginBottom="1dp">
	       <LinearLayout
	           android:orientation="vertical">
		       <TextView
		           android:id="@+id/tvLocationUpdateFrequency"
				   android:layout_width="match_parent"
				   android:layout_height="wrap_content"
		           android:text="@string/tvLocationUpdateFrequency">
		       </TextView>
		       <EditText
		           android:id="@+id/etLocationUpdateFrequency"
				   android:layout_width="match_parent"
				   android:layout_height="wrap_content"
				   android:inputType="number"
		           android:text="@string/dfLocationUpdateFrequency">
	           </EditText>
               <TextView
		           android:id="@+id/tvTrackingDisabled"
				   android:layout_width="match_parent"
				   android:layout_height="wrap_content"
		           android:text="@string/tvTrackingDisabled">
               </TextView>
           </LinearLayout>
	   </TableRow>
	</TableLayout>
    <RelativeLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content">
        <Button
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/btSave">
        </Button>
        <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btSave"
            android:text="@string/btCancel">
        </Button>
	       
	
	</RelativeLayout>
</LinearLayout>
